# ligate-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  constants.toml
.github/workflows/: ci.yml  cla.yml  release.yml
examples/: derive_digest.rs
src/: attest.rs  balance.rs  cli.rs  completions.rs  config.rs  faucet.rs  info.rs  keys.rs  keystore.rs  main.rs  nonce.rs  query.rs  register_attestor_set.rs  register_schema.rs  sign_attestation.rs  submit_attestation.rs  transfer.rs
