[package]
name = "ligate-cli"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Operator + builder CLI for Ligate Chain. One-line wrapper around the typed client SDK."
repository = "https://github.com/ligate-io/ligate-cli"
homepage = "https://ligate.io"
authors = ["Ligate Labs <hello@ligate.io>"]
rust-version = "1.93"
publish = false

[[bin]]
name = "ligate"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"

# Async runtime (NodeClient + Submitter need it for queries + submission)
tokio = { version = "1", features = ["full"] }

# JSON + structured output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Hex + bech32 (key file IO and address parsing)
hex = "0.4"
bech32 = "0.11"

# Borsh for transaction encoding
borsh = { version = "1", features = ["derive"] }

# Crypto for `keys generate` (lifted from chain genesis-tool)
ed25519-dalek = "2"
rand = "0.8"
sha2 = "0.10"

# HTTP client for the `faucet claim` subcommand
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Local config + keystore
toml = "0.8"
directories = "5"

# Chain-side crates (git deps until upstream SDK lands on crates.io,
# tracked in chain repo #235). All pinned to the same chain-repo
# branch so they stay version-coherent across faucet + cli + ts-sdk.
ligate-client = { git = "https://github.com/ligate-io/ligate-chain.git", branch = "main", features = ["submit"] }
ligate-stf    = { git = "https://github.com/ligate-io/ligate-chain.git", branch = "main", features = ["native"] }
ligate-rollup = { git = "https://github.com/ligate-io/ligate-chain.git", branch = "main" }

# Sovereign SDK pieces we directly construct.
sov-bank        = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779", features = ["native"] }
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk.git", rev = "f89964c66bcfb6a31712e43278378b54c33d3779", features = ["native"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# SDK fork patch block.
#
# ligate-chain bumped its Sovereign SDK pin to the in-house fork at
# `ligate-io/sovereign-sdk@ligate-mainline` for the Phase 6.0 metric
# work (mempool depth + DA submission failures + finalization latency
# need types like `sov_blob_sender::BlobExecutionStatus` that only
# exist on the fork). The chain's transitive deps therefore expect the
# fork; since `[patch]` blocks don't carry across workspaces, ligate-cli
# has to mirror the same patch surface to keep compile-time type
# identity with the chain crates it links against.
#
# Keep this list in sync with the chain repo's Cargo.toml `[patch]`
# block. Bumping the chain pin without bumping this rev results in a
# `sov_blob_sender::BlobExecutionStatus` type-mismatch at the chain
# crate boundary.
[patch."https://github.com/Sovereign-Labs/sovereign-sdk.git"]
sov-accounts                   = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-address                    = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-api-spec                   = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-attester-incentives        = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-bank                       = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-blob-sender                = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-blob-storage               = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-build                      = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-capabilities               = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-celestia-adapter           = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-chain-state                = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-db                         = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-kernels                    = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-mock-da                    = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-mock-zkvm                  = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-modules-api                = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-modules-rollup-blueprint   = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-modules-stf-blueprint      = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-node-client                = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-operator-incentives        = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-prover-incentives          = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-risc0-adapter              = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-rollup-apis                = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-rollup-full-node-interface = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-rollup-interface           = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-sequencer                  = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-sequencer-registry         = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-state                      = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-stf-runner                 = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-test-utils                 = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-uniqueness                 = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }
sov-zkvm-utils                 = { git = "https://github.com/ligate-io/sovereign-sdk.git", rev = "572cada6c6c84ef8d90baef451484a2161bdb85c" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
